force-app/main/default/objects/Influencers__c/Influencers__c.object-meta.xml
<CustomObject>
    <label>Influencers</label>
    <nameField>
        <displayFormat>INF-{0000000}</displayFormat>
        <label>Influencer</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Influencers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>