force-app/main/default/objects/Influencers__c/fields/Has_Influencer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Has_Influencer_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Influencer Contact</label>
    <type>Checkbox</type>
</CustomField>