force-app/main/default/objects/Influencers__c/fields/Inconsistent_Contact_Account__c.field-meta.xml
<CustomField>
    <fullName>Inconsistent_Contact_Account__c</fullName>
    <formula>IF( AND(!ISBLANK(Infuencer_Account__c),
        !ISBLANK(Influencer_Contact__r.AccountId)
       ),Infuencer_Account__c !=  Influencer_Contact__r.AccountId,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inconsistent Contact Account</label>
    <type>Checkbox</type>
</CustomField>