force-app/main/default/objects/Influencers__c/fields/Influencer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Influencer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Influencer Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Influencers</relationshipLabel>
    <relationshipName>Influencers</relationshipName>
    <type>Lookup</type>
</CustomField>