force-app/main/default/objects/Influencers__c/fields/Infuencer_Account__c.field-meta.xml
<CustomField>
    <fullName>Infuencer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Infuencer Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Influencer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Project</relationshipLabel>
    <relationshipName>Infuencer_Account</relationshipName>
    <type>Lookup</type>
</CustomField>