force-app/main/default/objects/Influencers__c/fields/Project_Amount__c.field-meta.xml
<CustomField>
    <fullName>Project_Amount__c</fullName>
    <label>Project Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>