force-app/main/default/objects/Influencers__c/fields/Send_Email_Depreciated__c.field-meta.xml
<CustomField>
    <fullName>Send_Email_Depreciated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Email Depreciated</label>
    <type>Checkbox</type>
</CustomField>